--- a/gb/22/10/14/n13845013.md
+++ b/gb/22/10/14/n13845013.md
@@ -1,55 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>货车司机心肌梗塞 强撑百里紧急就医</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13845014-580025-600x400.jpg" />
+<h6>光田综合医师心脏内科邱一骐医师表示，当民众在国道上心肌梗塞发作，最好立刻休息或叫救护车。（光田综合医院提供）
+</h6>
+<hr>
+<p>【大纪元2022年10月14日讯】（大纪元记者邓玫玲台湾台中报导）一名68岁李姓<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B4%A7%E8%BD%A6%E5%8F%B8%E6%9C%BA.md#1">货车司机</a>，日前送完货要从新竹返回台南时，当下即出现胸痛不适症状，因返家心切，吃了几颗舌下锭即赶着上路，开上国道不到十分钟，出现强烈胸痛、呼吸困难及晕眩等症状，但因北部没有熟悉的医院，所以强忍不适开了百里撑到台中光田综合医院急诊就医，经诊断为急性<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BF%83%E8%82%8C%E6%A2%97%E5%A1%9E.md#1">心肌梗塞</a>发作，幸好急救过程相当顺利，让他直呼有神保佑才能捡回一条命。</p>
+<p>10月起，台湾开始进入秋冬，是心血管疾病的好发期。光田综合医院心脏内科邱一骐医师认为，这名患者本身就有心血管病史，当时李先生急性<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BF%83%E8%82%8C%E6%A2%97%E5%A1%9E.md#1">心肌梗塞</a>发作，一路从桃园撑到台中，虽然相当幸运，但却是非常不恰当的方式。“主要是心肌梗塞的患者，随时都有昏厥的可能，万一在国道上昏迷，就很有可能引发车祸，无论是对患者本身，还是其他驾驶，都是非常危险的。”</p>
+<p>近几年来，汽车或客运驾驶因心血管疾病突然发作，导致驾驶在国道上死亡或引发车祸的例子，也相当常见。邱一骐医师表示，心肌梗塞对驾驶人来说之所以危险，是因为发作时民众常未能当下就察觉，尤其是之前从未有病史的患者，往往会忽略身体不适的迹象而强撑。“心肌梗塞症状有时不明显，患者在长途驾驶前可能只觉得容易累跟喘，也就不会意识到自己随时都有可能心肌梗塞。”</p>
+<p>而一旦民众在国道驾驶时身体不适，又该如何处理呢？邱医师建议，有不舒服的症状时，就应提高警觉，且可先找邻近的休息站休息，观察是否持续不适；若民众怀疑自己心肌梗塞正在发作，应立即停在路边或路肩，并立起三角架示警后方来车，然后尽速打119请求救护车协助就医。邱一骐医生认为如此既能为自己争取到更多抢救时间，也不至于影响用路人安全。</p>
+<p>邱一骐医师提醒民众，当心肌梗塞症状出现时，马上送医才是唯一解方。“心血管疾病的抢救几乎都在跟时间赛跑，愈早就医就愈有帮助，有病史的民众千万不要强撑。”邱一骐提醒民众，若有胸痛、胸闷，胸口有挤压感，或是有呼吸急促的症状出现，可能就是心血管堵塞的症状，最好立刻就医。</p>
+<p>此外，邱一骐医师也表示，血管堵塞是长期累积，因此患者在发病前几周或前几个月，可能就有不舒服的症状，例如走路特别喘、胸口闷痛、冒冷汗，甚至上腹疼痛，因症状常被轻忽而错失就医良机。“无论是不是心肌梗塞，若是出发前已有疲劳、胸闷等症状时，就不要长途开车。”因为长时间开车需要高度的专注力，当民众身体不适时遇到交通状况，往往也无法妥善因应，进而导致危险的驾驶行为，邱一骐医师呼吁民众，长途驾驶前，一定要多留意自己的身心状况。◇</p>
+<p>责任编辑：李悦</p>
 
-<h6></h6>
-<hr>[replace]（<a href=<ahref;<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/19920513/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/19920513/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/19920513/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/19920513/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/6/7/27/n1400195.md#1">司机病昏 警大交通车冲上骑楼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/8/5/n2986871.md#1">如何中医配合调理 达到降低胆固醇的疗效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/12/3/10/n3535803.md#1">扁办：陈幸妤未同意扁吃阿提凡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/2/n10270590.md#1">双E行动即刻救命   提高救命的成功率</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/5/27/n12979380.md#1">【疫情5.27】美敦促世卫继续调查病毒起源</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/2/n13725196.md#1">急性心肌梗塞  分秒必争</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950670.md#1">职涯无缝接轨 长庚科大嘉义分部校园巡礼抵嘉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950627.md#1">桃园“大溪好生活”再造历史现场计划2.0启动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950544.md#1">桃园果菜公司与桃捷公司新任董事长联合宣誓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950534.md#1">石门水库蓄水率约60% 桃市府启动抗旱应变措施</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/12/11/9/n3725989.md#1">急性心肌梗塞 引发公共安全问题</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/14/7/1/n4190746.md#1">司机心肌梗塞  台东马偕救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/18/n8717811.md#1">父游台心肌梗塞 韩国女子谢台湾抢救及时</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/3/6/n8877647.md#1">陆客游览车冲入台民宅 司机疑心肌梗塞不治</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/9/n9713631.md#1">疑司机心肌梗塞 台南公车自撞7伤</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/24/n13395087.md#1">驾驶突昏迷 台湾两英雄紧急控制游览车救43人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963889.md#1">蛋荒乱象生 台学者：重新检讨禽流感扑杀机制</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963581.md#1">台湾房产业者：神给人机会修行</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963131.md#1">行政院拍板 国家漫博馆敲址台中刑务所</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962499.md#1">清明连假游东丰绿廊  体验旧山线历史烟岚</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/5/n11431635.md#1" target="_blank">共产暴政录：盛世才与新疆的几个待解问题</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/14/n10637364.md#1" target="_blank">中共“文艺沙皇”被囚9年 晚年反思悲剧终局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943724.md#1">妙不可言的舞剧《草船借箭》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944812.md#1">柳夫人天赋异禀知天命 功夫奇特一人胜千军</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950265.md#1">【军事热点】俄军陷停滞 内讧和失控笼罩莫斯科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950199.md#1">【探索时分】为何俄罗斯间谍卫星毫无作用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950249.md#1">【中国禁闻】李强首秀答十问 张口必提习近平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948884.md#1">【翻墙必看】分析：谁投了李强的反对票</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948769.md#1">梁朝伟亚洲电影大奖封帝 刘嘉玲打开名单惊呆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949642.md#1">赵薇遭封杀一年半 47岁生日自拍照显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948798.md#1">“什么戏都想演” 洪金宝叹演动作片难糊口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948969.md#1">奥斯卡获奖名单揭晓 杨紫琼成首位亚裔影后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949469.md#1">2月份美国房市 拐点出现！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948420.md#1">退休的最大挑战是什么？哈佛85年研究释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945694.md#1">保持大脑敏锐 胡萝卜不可忽视的6大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943660.md#1">干细胞模型揭示青光眼治疗的秘密</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/14/n13845013.htm"></a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/14/n13845013.htm">货车司机心肌梗塞 强撑百里紧急就医</a></p><hr>
 
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/14/n13845013.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
